# floorplan-analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  gui.py  main.py  mypy.ini  pyproject.toml  user_config.yaml
data/train/: train.csv
floorplan_analyzer/: inference_pipeline.py  training_pipeline.py  visualizer.py
floorplan_analyzer/config/: label_definition.json  settings.py
floorplan_analyzer/data_processing/: data_handler_factory.py  data_manager.py  training_dataset.py
floorplan_analyzer/data_processing/handlers/: base_data_handler.py  image_handler.py  pdf_handler.py
floorplan_analyzer/models/: model.py
floorplan_analyzer/visualizer/: visualizer.py
scripts/: synthetic_data.py
