[project]
name = "floorplan-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Andrade"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
